# RdsGatewayRepM3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VersionInfo.h.in  build64_2017.bat  build64_2022.bat  buildMake.sh  buildMakeRel.sh
RepM3/: CMakeLists.txt  repM3.cpp  repM3.h
RepM3-example/: CMakeLists.txt  HexStringCoversion.h  MyHexStringCoversion.h  main.cpp
RepM3-test/: CMakeLists.txt  main.cpp
RepM3Edge/: CMakeLists.txt  RepM3Device.h  RepM3Edge.cpp  RepM3Edge.h  RepM3EdgeApi.h  RepM3GwDevice.h
include/: CMakeLists.txt  repM3.h  repM3_provider.h  repM3provider.h
repm3gw/: CMakeLists.txt  main.cpp
repm3gw/backup/: keep.txt
repm3gw/configuration/: lgmc__RepM3Edge.json  oegw__AwsFleetProv.json  oegw__BackupRestore.json  oegw__IpAdrProvider.json  oegw__IqrfAdapt2.json  oegw__IqrfCloudApiHandler.json  oegw__MsgMqttProvisioning.json  oegw__ServiceTopicListener.json  oegw__TimePointProvider.json  oegw__WorkerThread.json  shape__MqttService-AwsFleetProv.json  shape__MqttService-MsgMqttProvisioning.json  shape__WebsocketCppClientService-IqrfAdapt.json
repm3gw/configurationLinDaemon/: config.json  create-install.sh  install.sh  purge.sh  repm3gw.service  update-install.sh
repm3gw/configurationLinDaemon/cert/bootstrap/: certificate.pem.crt  private.pem.key
repm3gw/configurationLinDaemon/configuration/: oegw__IdentityProvider.json  shape__TraceFileService-repm3gw.json  shape__TraceFileService-shape.json
repm3gw/configurationWin/: config.json
repm3gw/configurationWin/configuration/: oegw__IdentityProvider.json  shape__TraceFileService-repm3gw.json  shape__TraceFileService-shape.json
